Make calculator width a percentage and set min width to fix overflow on smaller window

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ html {
 
 .calculator {
   background-color: rgb(194, 191, 191);
-  width: 30em;
+  width: 30%;
   height: 40em;
   margin-top: 2em;
   display: flex;
@@ -25,6 +25,7 @@ html {
   position: relative;
   border: 0.5em solid black;
   border-radius: 2em;
+  min-width: 313px;
 }
 
 .display {
